--- a/03-media-query/2-skryvani.html
+++ b/03-media-query/2-skryvani.html
@@ -11,18 +11,18 @@
 
         <h1>Media Query</h1>
         <p>Změň velikost okna prohlížeče a koukni, co se stane.</p>
-
-        <div class="obdelnik cervena banner">
+<div class="kontejner">
+        <div class="obdelnik cervena banner sloupec">
             <strong>Zlý reklamní banner</strong><br>
             Jsem všem protivný,<br>
             na mobilu se raději schovám.
         </div>
 
-        <div class="obdelnik zelena">My jsme hodné obdélníky,<br>jsme vidět pořád</div>
+        <div class="obdelnik zelena sloupec">My jsme hodné obdélníky,<br>jsme vidět pořád</div>
 
-        <div class="obdelnik zelena">My jsme hodné obdélníky,<br>jsme vidět pořád</div>
+        <div class="obdelnik zelena sloupec">My jsme hodné obdélníky,<br>jsme vidět pořád</div>
 
-        <div class="obdelnik zelena">My jsme hodné obdélníky,<br>jsme vidět pořád</div>
-
+        <div class="obdelnik zelena sloupec">My jsme hodné obdélníky,<br>jsme vidět pořád</div>
+    </div>
     </body>
 </html>
